--- a/.github/workflows/build-v27.yml
+++ b/.github/workflows/build-v27.yml
@@ -73,7 +73,7 @@ jobs:
         run: |
           docker run --rm -v ${{ github.workspace }}:/go/src/github.com/docker/docker \
             -w /go/src/github.com/docker/docker \
-            ghcr.io/${{ github.repository_owner }}/nerdctl:${{ env.DOCKER_INIT_VERSION}}-${{ env.TARGET_ARCH }} \
+            ghcr.io/${{ github.repository_owner }}/tini:${{ env.DOCKER_INIT_VERSION}}-${{ env.TARGET_ARCH }} \
             sh -c "mkdir -p .tmp/${{ env.TARGET_ARCH }} && cp /usr/local/bin/tini-static .tmp/${{ env.TARGET_ARCH }}/docker-init"
 
       - name: Set up Docker Buildx
